etc/tests/fuzz/errors/attr/contract-non-name.nshape
shape attr-contract-non-name {
  family "compiler-errors/attr"
  generator "error"
  features ["error", "attr", "negative", "diagnostic"]
  template ny-compile-fail
  expect compile_fail

  expect_message "expected parameter name in @consumes(...)"
  source ny <<'NY'
use std.core

@consumes(1)
fn f(x) { x }
print(f(1))
NY
}
